# notifier-rs

./: Cargo.toml  Dockerfile  build.rs  config.example.toml
.github/workflows/: release.yml
schemas/: mensatt.graphql
src/: image.rs  main.rs  settings.rs
src/discord/: bot.rs
src/gql/: client.rs  listener.rs  mod.rs  mutations.rs  queries.rs  subscriptions.rs
