[package]
name = "notifier-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cynic = { version = "3.8.0", features = ["http-reqwest"] }
graphql-ws-client = { version = "0.10.2", features = ["client-cynic", "tungstenite"] }
reqwest = { version = "0.12.8", features = ["blocking"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls", "tokio-native-tls"] }
futures = "0.3.31"
log = "0.4.22"
pretty_env_logger = "0.5.0"
anyhow = "1.0.90"
serenity = { version = "0.12.2", features = ["cache", "collector", "default_native_tls", "simd_json", "utils"] }
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"

[build-dependencies]
cynic-codegen = { version = "3" }
